--- a/src/pages/payload/payload.html
+++ b/src/pages/payload/payload.html
@@ -17,12 +17,12 @@
           <ion-textarea placeholder="Enter the content" [(ngModel)]="content"></ion-textarea>
         </ion-item>
         <div>
-          <button ion-button color="danger" (click)="cancelPayload()">
-            I can't do this right now
-          </button> 
           <button ion-button [disabled]="!payloadComplete()" (click)="submitPayload()">
             Submit
           </button>
+          <button ion-button color="danger" (click)="cancelPayload()">
+            Back
+          </button> 
         </div>
       </ion-card-content>
     </ion-card>
