--- a/src/pages/payload/payload.html
+++ b/src/pages/payload/payload.html
@@ -10,9 +10,9 @@
       <img [src]="this.getObjectImage()" />
       <ion-card-content>
         <ion-card-title>
-          What is in your gift?
+          Why this gift?
         </ion-card-title>
-        <div>Write a message for {{this.getReceiverName()}} about this part of their gift when they have found it in the museum.</div>
+        <div>Why did you choose this for {{this.getReceiverName()}}?</div>
         <ion-item class="payloadtext">
           <ion-textarea placeholder="Enter the content" [(ngModel)]="content"></ion-textarea>
         </ion-item>
